   NativeWindow (2.3+, supports hw rotation, subpicture blending, opaque)
 * Support rotation in Android NativeWindow output and hardware decoders
 * Renamed the Direct3D output module to Direct3D9
 * Added Direct3D11 video mode supporting both Windows desktop and WinRT modes,
   supporting subpicture blending and hardware acceleration
 * EFL Evas video output with Tizen TBM Surface support

Text renderer:
 * CTL support through Harfbuzz in the Freetype module

Video filter:
 * Hardware deinterlacing on the rPI, using MMAL
 * New video filter to convert between fps rates
 * Added 9-bit and 10-bit support to image adjust filter
 * New edge detection filter uses the Sobel operator to detect edges

Stream Output:
 * Chromecast output module
 * RGB24 and YCbCr 4:2:0 RTP packetization

Encoder:
 * Support for Daala video in 4:2:0 and 4:4:4
 * VP8 and VP9 encoder using libvpx

Muxers:
 * Added fragmented/streamable MP4 muxer
 * Added support for muxing VC1 and WMAPro in MP4
 * Opus in MPEG Transport Stream
 * Daala in Ogg

Service Discovery:
 * New NetBios service discovery using libdsm
 * New mDNS services discovery using libmicrodns
 * New mDNS services discovery using Bonjour (Mac OS X, tvOS, iOS)
 * Rewrite of the UPnP service discovery

Mac OS X Interface
 * Dropped support for Mac OS X 10.6 Snow Leopard
 * Add support for keyboard blacklight dimming during fullscreen video playback
 * new AppleScript API giving access to audio desynchronization
 * Support for building with disabled sparkle update mechanism
 * New configure flag to disable automatic updates
 * Expanded AppleScript API for menu detection and navigation

iOS:
 * Dropped support for iOS 6.x

Qt interface:
 * Batch convert support

Skins2:
 * Support key accelerators

libVLC:
 * Add libvlc_media_new_callbacks for custom input byte streams
 * Add libvlc_audio_output_device_enum to enumerate devices of current aout
 * Split of libvlc_media_discoverer_new_from_name into libvlc_media_discoverer_new,